--- a/index.html
+++ b/index.html
@@ -1,25 +1,515 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Student Profile</title>
+    <style>
+      /* Updated and new styles */
+      :root {
+        --primary-color: #2a2f4c;
+        --secondary-color: #1a73e8;
+        --background-color: #1f2233;
+        --card-background: #2a2f4c;
+        --text-color: #ffffff;
+      }
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png"
-    href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/GraphQL_Logo.svg/2048px-GraphQL_Logo.svg.png" />
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/grid-layout.css">
-    <link rel="stylesheet" href="css/line-graph.css">
-    <link rel="stylesheet" href="css/projects.css">
-    <link rel="stylesheet" href="css/skills.css">
-    <link rel="stylesheet" href="css/other.css">
-    <link rel="stylesheet" href="css/signIn.css">
-    <link href="https://cdn.jsdelivr.net/npm/gotham-fonts@1.0.3/css/gotham-rounded.min.css" rel="stylesheet">
-    <title>GraphQL</title>
-</head>
+      body {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        margin: 0;
+        padding: 20px;
+        background-color: var(--background-color);
+        color: var(--text-color);
+        line-height: 1.6;
+      }
 
-<body>
-</body>
-<script type="module" src="./js/graphql.js"></script>
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
 
+      /* Enhanced Login Form */
+      .login-container {
+        max-width: 400px;
+        margin: 100px auto;
+        padding: 30px;
+        background: var(--card-background);
+        border-radius: 15px;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+      }
+
+      .login-container h2 {
+        text-align: center;
+        color: var(--text-color);
+        margin-bottom: 30px;
+        font-size: 2em;
+      }
+
+      .form-group {
+        margin-bottom: 20px;
+      }
+
+      input {
+        width: 100%;
+        padding: 12px;
+        margin-top: 8px;
+        border: none;
+        border-radius: 8px;
+        background: rgba(255, 255, 255, 0.1);
+        color: var(--text-color);
+        font-size: 16px;
+        transition: all 0.3s ease;
+      }
+
+      input:focus {
+        outline: none;
+        background: rgba(255, 255, 255, 0.15);
+        box-shadow: 0 0 10px rgba(26, 115, 232, 0.5);
+      }
+
+      button {
+        width: 100%;
+        padding: 12px;
+        background: var(--secondary-color);
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+        transition: all 0.3s ease;
+      }
+
+      button:hover {
+        background: #1557b0;
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(26, 115, 232, 0.4);
+      }
+
+      /* Profile Container Styling */
+      .profile-container {
+        display: none;
+        background: var(--card-background);
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(10px);
+      }
+
+      /* Welcome Message Animation */
+      .welcome-message {
+        font-size: 2.5em;
+        font-weight: bold;
+        text-align: center;
+        margin: 20px 0;
+        background: linear-gradient(
+          90deg,
+          #ff0000,
+          #ff7f00,
+          #ffff00,
+          #00ff00,
+          #0000ff,
+          #4b0082,
+          #8f00ff
+        );
+        background-size: 200% auto;
+        color: #fff;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: rainbow 6s linear infinite;
+      }
+
+      @keyframes rainbow {
+        0% {
+          background-position: 0% 50%;
+        }
+        100% {
+          background-position: 200% 50%;
+        }
+      }
+
+      .graphs-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+        margin-top: 30px;
+      }
+
+      .graph {
+        background: rgba(255, 255, 255, 0.05);
+        padding: 20px;
+        border-radius: 15px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+      }
+
+      .graph h3 {
+        color: var(--text-color);
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      .error {
+        color: #ff4444;
+        margin-top: 10px;
+        text-align: center;
+        font-weight: bold;
+      }
+
+      /* Stats Cards */
+      .stats-card {
+        background: rgba(255, 255, 255, 0.05);
+        padding: 15px;
+        border-radius: 10px;
+        margin: 10px 0;
+        backdrop-filter: blur(5px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        transition: transform 0.3s ease;
+      }
+
+      .stats-card:hover {
+        transform: translateY(-5px);
+      }
+
+      /* Responsive Design */
+      @media (max-width: 768px) {
+        .graphs-container {
+          grid-template-columns: 1fr;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <!-- Login Form -->
+      <div id="loginContainer" class="login-container">
+        <h2>Login</h2>
+        <div class="form-group">
+          <input type="text" id="username" placeholder="Username or Email" />
+        </div>
+        <div class="form-group">
+          <input type="password" id="password" placeholder="Password" />
+        </div>
+        <button onclick="login()">Login</button>
+        <div id="loginError" class="error"></div>
+      </div>
+
+      <!-- Profile Section -->
+      <div id="profileContainer" class="profile-container">
+        <button onclick="logout()" style="width: auto; float: right">
+          Logout
+        </button>
+        <h1>Student Profile</h1>
+        <div id="basicInfo"></div>
+
+        <div class="graphs-container">
+          <div class="graph">
+            <h3>XP Progress Over Time</h3>
+            <svg id="xpGraph" width="500" height="300"></svg>
+          </div>
+          <div class="graph">
+            <h3>Audit Ratio</h3>
+            <svg id="auditGraph" width="500" height="300"></svg>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const API_URL =
+        'https://learn.reboot01.com/api/graphql-engine/v1/graphql';
+      const AUTH_URL = 'https://learn.reboot01.com/api/auth/signin';
+      let jwt = localStorage.getItem('jwt');
+
+      // Check if already logged in
+      if (jwt) {
+        showProfile();
+      }
+
+      async function login() {
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+        const credentials = btoa(`${username}:${password}`);
+
+        try {
+          const response = await fetch(AUTH_URL, {
+            method: 'POST',
+            headers: {
+              Authorization: `Basic ${credentials}`,
+            },
+          });
+
+          if (!response.ok) {
+            throw new Error('Invalid credentials');
+          }
+
+          const data = await response.json();
+          jwt = data;
+          localStorage.setItem('jwt', jwt);
+          showProfile();
+        } catch (error) {
+          document.getElementById('loginError').textContent = error.message;
+        }
+      }
+
+      function logout() {
+        localStorage.removeItem('jwt');
+        location.reload();
+      }
+
+      async function fetchGraphQLData(query) {
+        const response = await fetch(API_URL, {
+          method: 'POST',
+          headers: {
+            Authorization: `Bearer ${jwt}`,
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ query }),
+        });
+        return response.json();
+      }
+
+      async function showProfile() {
+        document.getElementById('loginContainer').style.display = 'none';
+        document.getElementById('profileContainer').style.display = 'block';
+
+        // Fetch user data
+        const query = `
+                query {
+                    user {
+                        login
+                        firstName
+                        lastName
+                        totalUp
+                        totalDown
+                        transactions(where: {type: {_eq: "xp"}}, order_by: {createdAt: asc}) {
+                            amount
+                            createdAt
+                        }
+                    }
+                }
+            `;
+
+        try {
+          const data = await fetchGraphQLData(query);
+          const user = data.data.user[0];
+
+          // Display basic info
+          document.getElementById('basicInfo').innerHTML = `
+                    <div class="welcome-message">Welcome, ${user.firstName} ${
+            user.lastName
+          }!</div>
+                    <table class="user-info-table">
+                        <tr>
+                            <td><strong>ID:</strong></td>
+                            <td>${user.login.split('@')[0] || 'N/A'}</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Full Name:</strong></td>
+                            <td>${user.firstName} ${user.lastName}</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Username:</strong></td>
+                            <td>${user.login}</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Campus:</strong></td>
+                            <td>Bahrain</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Last Activity:</strong></td>
+                            <td>${
+                              user.transactions[0]
+                                ? new Date(
+                                    user.transactions[0].createdAt
+                                  ).toLocaleString()
+                                : 'No activity'
+                            }</td>
+                        </tr>
+                    </table>
+                `;
+
+          // Draw XP progress graph
+          drawXPGraph(user.transactions);
+
+          // Draw audit ratio graph
+          drawAuditPieChart(user.totalUp, user.totalDown);
+        } catch (error) {
+          console.error('Error fetching data:', error);
+        }
+      }
+
+      function drawXPGraph(transactions) {
+        const svg = document.getElementById('xpGraph');
+        svg.innerHTML = '';
+
+        const width = 500;
+        const height = 300;
+        const padding = 40;
+
+        // Calculate cumulative XP
+        let cumulativeXP = 0;
+        const data = transactions.map((t) => {
+          cumulativeXP += t.amount;
+          return {
+            date: new Date(t.createdAt),
+            xp: cumulativeXP,
+          };
+        });
+
+        // Scale functions
+        const xScale = (date) => {
+          const min = data[0].date;
+          const max = data[data.length - 1].date;
+          return ((date - min) / (max - min)) * (width - 2 * padding) + padding;
+        };
+
+        const yScale = (xp) => {
+          const max = Math.max(...data.map((d) => d.xp));
+          return height - (xp / max) * (height - 2 * padding) - padding;
+        };
+
+        // Draw line
+        let path = `M ${xScale(data[0].date)} ${yScale(data[0].xp)}`;
+        data.forEach((d) => {
+          path += ` L ${xScale(d.date)} ${yScale(d.xp)}`;
+        });
+
+        const line = document.createElementNS(
+          'http://www.w3.org/2000/svg',
+          'path'
+        );
+        line.setAttribute('d', path);
+        line.setAttribute('stroke', '#1a73e8');
+        line.setAttribute('fill', 'none');
+        svg.appendChild(line);
+
+        // Add axes
+        const xAxis = document.createElementNS(
+          'http://www.w3.org/2000/svg',
+          'line'
+        );
+        xAxis.setAttribute('x1', padding);
+        xAxis.setAttribute('y1', height - padding);
+        xAxis.setAttribute('x2', width - padding);
+        xAxis.setAttribute('y2', height - padding);
+        xAxis.setAttribute('stroke', 'black');
+        svg.appendChild(xAxis);
+
+        const yAxis = document.createElementNS(
+          'http://www.w3.org/2000/svg',
+          'line'
+        );
+        yAxis.setAttribute('x1', padding);
+        yAxis.setAttribute('y1', padding);
+        yAxis.setAttribute('x2', padding);
+        yAxis.setAttribute('y2', height - padding);
+        yAxis.setAttribute('stroke', 'black');
+        svg.appendChild(yAxis);
+      }
+
+      function drawAuditPieChart(up, down) {
+        const svg = document.getElementById('auditGraph');
+        svg.innerHTML = '';
+
+        const total = up + down;
+        const upRatio = up / total;
+        const downRatio = down / total;
+
+        const centerX = 250;
+        const centerY = 150;
+        const radius = 100;
+
+        // Convert ratio to angles
+        const upAngle = upRatio * 360;
+        const downAngle = downRatio * 360;
+
+        // Create pie slices
+        const createSlice = (startAngle, endAngle, color) => {
+          const start = polarToCartesian(centerX, centerY, radius, startAngle);
+          const end = polarToCartesian(centerX, centerY, radius, endAngle);
+          const largeArcFlag = endAngle - startAngle <= 180 ? 0 : 1;
+
+          const path = [
+            'M',
+            centerX,
+            centerY,
+            'L',
+            start.x,
+            start.y,
+            'A',
+            radius,
+            radius,
+            0,
+            largeArcFlag,
+            1,
+            end.x,
+            end.y,
+            'Z',
+          ].join(' ');
+
+          const slice = document.createElementNS(
+            'http://www.w3.org/2000/svg',
+            'path'
+          );
+          slice.setAttribute('d', path);
+          slice.setAttribute('fill', color);
+          return slice;
+        };
+
+        svg.appendChild(createSlice(0, upAngle, '#4CAF50'));
+        svg.appendChild(createSlice(upAngle, 360, '#F44336'));
+
+        // Add legend
+        addLegendItem(
+          svg,
+          350,
+          120,
+          '#4CAF50',
+          `Up (${Math.round(upRatio * 100)}%)`
+        );
+        addLegendItem(
+          svg,
+          350,
+          150,
+          '#F44336',
+          `Down (${Math.round(downRatio * 100)}%)`
+        );
+      }
+
+      function polarToCartesian(centerX, centerY, radius, angleInDegrees) {
+        const angleInRadians = ((angleInDegrees - 90) * Math.PI) / 180.0;
+        return {
+          x: centerX + radius * Math.cos(angleInRadians),
+          y: centerY + radius * Math.sin(angleInRadians),
+        };
+      }
+
+      function addLegendItem(svg, x, y, color, text) {
+        const rect = document.createElementNS(
+          'http://www.w3.org/2000/svg',
+          'rect'
+        );
+        rect.setAttribute('x', x);
+        rect.setAttribute('y', y - 10);
+        rect.setAttribute('width', 20);
+        rect.setAttribute('height', 20);
+        rect.setAttribute('fill', color);
+        svg.appendChild(rect);
+
+        const label = document.createElementNS(
+          'http://www.w3.org/2000/svg',
+          'text'
+        );
+        label.setAttribute('x', x + 30);
+        label.setAttribute('y', y + 5);
+        label.textContent = text;
+        svg.appendChild(label);
+      }
+    </script>
+  </body>
 </html>
