--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           <!-- <h3>Progress</h3> -->
           <!-- <div id="progressTableContainer"></div> -->
           <!-- </div>  -->
+          <div class="progress-table-container">
+            <h3>Progress</h3>
+            <div id="progressTableContainer"></div>
+        </div>
       </div>
       </div>
     </div>
