--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
           Logout
         </button>
         <h1>Student Profile</h1>
+        <!-- Add Quote Container -->
+        <div id="quoteContainer" class="quote-container">
+          <p id="quote" class="quote-text"></p>
+          <p id="author" class="quote-author"></p>
+        </div>
         <div class="graphs-container">
           <div id="basicInfo"></div>
           <div class="graph">
@@ -55,6 +60,8 @@
       </div>
     </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/graphs.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/profile.js"></script>
   </body>
 </html>
