--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Student Profile</title>
     <link rel="stylesheet" href="styles.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -33,8 +34,7 @@
           <p id="author" class="quote-author"></p>
         </div>
         <div class="graphs-container">
-          <div id="basicInfo"></div>
-          <div class="graph">
+v           <div class="graph">
               <h3>XP Progress Over Time</h3>
               <svg id="xpGraph" width="100%" height="500"></svg>
           </div>
@@ -63,5 +63,8 @@
     <script src="js/graphs.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/profile.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', createParticles);
+    </script>
   </body>
 </html>
