--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <p id="author" class="quote-author"></p>
         </div>
         <div class="graphs-container">
-v           <div class="graph">
+          <div id="basicInfo"></div>
+           <div class="graph">
               <h3>XP Progress Over Time</h3>
               <svg id="xpGraph" width="100%" height="500"></svg>
           </div>
